Josh - added plot to show countries with over 10 AirBnBs.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -244,7 +244,8 @@
    "source": [
     "# Split the address column into city, state and country columns and dropped the address column\n",
     "df[['city', 'state/province', 'country']] = df['address'].str.split(\", \",expand=True)\n",
-    "df = df.drop(['address'], axis=1)"
+    "df = df.drop(['address'], axis=1)\n",
+    "df = df.dropna(['price'])"
    ]
   },
   {
