Jul 20 - added line to make a 'cleaned_airbnb.csv' so that it's separate from the other messy data.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1879,6 +1879,15 @@
     "plt.plot([min(h_y_test), max(h_y_test)], [min(h_y_test), max(h_y_test)], color='red', linestyle='--')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned.to_csv('cleaned_airbnb.csv', sep=',', encoding='utf-8', index=False, header=True)\n"
+   ]
   }
  ],
  "metadata": {
